# seo-audit-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: rotate.md
.github/workflows/: ci.yml
analyze/: analyze.mjs  engine.mjs
analyze/detectors/: _shared.mjs  a11y.mjs  geo.mjs  hygiene.mjs  i18n.mjs  links.mjs  on-page.mjs  performance.mjs  structured-data.mjs  tech-index.mjs  trust.mjs
config/: ai-bots.SOURCES.md  ai-bots.json  authoritative-domains.json  crawl-profiles.json  iso-codes.json
config/rules/: a11y.json  geo.json  hygiene.json  i18n.json  links.json  on-page.json  performance.json  structured-data.json  tech-index.json  trust.json
crawl/: crawl.mjs  crux.mjs  enrich-fetch.mjs  fetch.mjs  gsc.py  linkgraph.mjs  parse.mjs  profiles.mjs  robots-match.mjs  run.mjs  safe-browsing.mjs  schema.mjs  sitefetch.mjs  ssrf-guard.mjs  throttle.mjs  tls-check.mjs
docs/: DESIGN.md
eval/: README.md  baseline.json  gate.json  run.mjs
eval/fixtures/: _build.mjs
eval/judge/: PROMPT.md  RUBRIC.md
examples/: findings.example.json
kb/: chunk.mjs  embed.mjs  ingest.mjs  pgvector_store.py  retrieve.mjs  store.mjs
lib/: findings-schema.mjs
report/: build-report.mjs
scripts/: leak-scan.mjs
skills/: context-handoff.md  interpret.md  strategy.md
test/: README.md  analyze-review.test.mjs  analyze.test.mjs  bin-crawl-and-analyze.test.mjs  concurrency.test.mjs  crawl-plumbing.test.mjs  crawl.test.mjs  crux.test.mjs  determinism.test.mjs  enrich-fetch.test.mjs  enrich-review.test.mjs  enrich.test.mjs  eval-fixtures.test.mjs  eval-lib.test.mjs  eval-review.test.mjs  eval-run.test.mjs  eval-schema.test.mjs  eval-scorers.test.mjs  example-run.test.mjs  fetch.test.mjs  findings-schema.test.mjs  fixture-server.mjs  fixture-server.test.mjs  handoff.test.mjs  kb-review.test.mjs  kb.test.mjs  leak-scan.test.mjs  link-integrity.test.mjs  linkgraph.test.mjs  nits-review.test.mjs  parse-hardening.test.mjs  parse.test.mjs  profiles.test.mjs  report-clarity.test.mjs  report-pdf.test.mjs  report-review.test.mjs  report.test.mjs  resume.test.mjs  robots-substance.test.mjs  robots-ua.test.mjs  (+10 more)
(+101 files in other folders)
